# AirGapSync

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
AirGapSync.xcodeproj/: project.pbxproj
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  PHASE1-COMPLETE.md  SECURITY.md
src/cli/: main.rs
src/rust_core/: config.rs  crypto.rs  keychain.rs  keys.rs  lib.rs  schema.rs
src/swift_ui/: AirGapSyncApp.swift  App.swift  Info.plist
src/swift_ui/Managers/: SyncManager.swift
src/swift_ui/Models/: Device.swift
src/swift_ui/Views/: DevicesView.swift  FooterView.swift  HeaderView.swift  MainView.swift  SettingsView.swift  StatusView.swift
tests/: phase1_integration.rs
to-dos/: ROADMAP.md  phase-1-design-key-management.md  phase-2-sync-engine.md  phase-3-ui-implementation.md  phase-4-audit-resilience.md  phase-5-packaging-distribution.md
